# bespoke_document_embeddings

./: .env_example  README.md  main.py  pyproject.toml
model_trainer/: trainer.py
parser/: docling_parser.py
question_generator/: dummy.py  generate_questions.py  llm_utils.py  prompts.py
