[project]
name = "bespoke-document-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "datasets>=4.1.1",
    "docling>=2.53.0",
    "docling-core>=2.48.1",
    "openai>=1.108.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
    "vllm>=0.10.2",
]
